--- a/index.html
+++ b/index.html
@@ -13,20 +13,15 @@
     />
 
     <title>Frontend Mentor | Social proof section</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    10,000+ of our users love our products.
+
+    
+  </body>
+</html>
+
+<!-- 10,000+ of our users love our products.
 
     We only provide great products combined with excellent customer service.
     See what our satisfied customers are saying about our services.
@@ -49,13 +44,4 @@
     Anne Wallace 
     Verified Buyer
     "Put an order with this company and can only praise them for the very high
-    standard. Will definitely use them again and recommend them to everyone!"
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
-  </body>
-</html>
+    standard. Will definitely use them again and recommend them to everyone!" -->
