--- a/index.html
+++ b/index.html
@@ -17,7 +17,89 @@
   </head>
   <body>
 
-    
+    <div class="header">
+      <div class="header-main">
+        <h1>10,000+ of our users love our products.</h1>
+        <p>
+          We only provide great products combined with excellent customer service.
+          See what our satisfied customers are saying about our services.
+        </p>
+      </div>
+      <div class="header-ratings">
+        <div class="rating">
+          <div class="stars">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+          </div>
+          <span>Rated 5 Starts in Reviews</span>
+        </div>
+        <div class="rating">
+          <div class="stars">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+          </div>
+          <span>Rated 5 Starts in Report Guru</span>
+        </div><div class="rating">
+          <div class="stars">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+          </div>
+          <span>Rated 5 Starts in BestTech</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="cards">
+      <div class="card">
+        <div class="card-header">
+          <img src="images/image-colton.jpg" alt="avatar">
+          <div class="card-info">
+            <p>Colton Smith</p>
+            <p>Verified Buyer</p>
+          </div>
+        </div>
+        <div class="card-quote">
+          "We needed the same printed design as the one we had ordered a week prior.
+          Not only did they find the original order, but we also received it in time.
+          Excellent!"
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-header">
+          <img src="images/image-irene.jpg" alt="avatar">
+          <div class="card-info">
+            <p>Irene Roberts</p>
+            <p>Verified Buyer</p>
+          </div>
+        </div>
+        <div class="card-quote">
+          "Customer service is always excellent and very quick turn around. Completely
+          delighted with the simplicity of the purchase and the speed of delivery."
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-header">
+          <img src="images/image-anne.jpg" alt="avatar">
+          <div class="card-info">
+            <p>Anne Wallace</p>
+            <p>Verified Buyer</p>
+          </div>
+        </div>
+        <div class="card-quote">
+          "Put an order with this company and can only praise them for the very high
+          standard. Will definitely use them again and recommend them to everyone!"
+        </div>
+      </div>
+    </div>
   </body>
 </html>
 
