Add desktop layout

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </p>
       </div>
       <div class="header-ratings">
-        <div class="rating">
+        <div class="rating far-left">
           <div class="stars">
             <img src="images/icon-star.svg" alt="star">
             <img src="images/icon-star.svg" alt="star">
@@ -36,7 +36,7 @@
           </div>
           <span>Rated 5 Starts in Reviews</span>
         </div>
-        <div class="rating">
+        <div class="rating left">
           <div class="stars">
             <img src="images/icon-star.svg" alt="star">
             <img src="images/icon-star.svg" alt="star">
@@ -63,7 +63,7 @@
         <div class="card-header">
           <img src="images/image-colton.jpg" alt="avatar">
           <div class="card-info">
-            <p>Colton Smith</p>
+            <p class="name" >Colton Smith</p>
             <p>Verified Buyer</p>
           </div>
         </div>
@@ -73,11 +73,11 @@
           Excellent!"
         </div>
       </div>
-      <div class="card">
+      <div class="card down">
         <div class="card-header">
           <img src="images/image-irene.jpg" alt="avatar">
           <div class="card-info">
-            <p>Irene Roberts</p>
+            <p class="name" >Irene Roberts</p>
             <p>Verified Buyer</p>
           </div>
         </div>
@@ -86,11 +86,11 @@
           delighted with the simplicity of the purchase and the speed of delivery."
         </div>
       </div>
-      <div class="card">
+      <div class="card far-down">
         <div class="card-header">
           <img src="images/image-anne.jpg" alt="avatar">
           <div class="card-info">
-            <p>Anne Wallace</p>
+            <p class="name" >Anne Wallace</p>
             <p>Verified Buyer</p>
           </div>
         </div>
